refactoring in posting a new order: total value is now calculated internally
