# src/domain/aggregates/order/core/entities/OrderEntity.ts
@@ -1,20 +1,20 @@
 import { OrderItemEntity } from './OrderItemEntity';
 
 export class OrderEntity {
-  order_id: number;
-  order_date: Date;
-  order_total: number;
-  customer_id: number;
-  order_items: OrderItemEntity[];
+  customer_id?: number;
+  order_items?: OrderItemEntity[];
+  order_id?: number;
+  order_date?: Date;
+  order_total?: number;
   customer_name?: string;
   order_status?: string;
 
   constructor(
-    order_id: number,
-    order_date: Date,
-    order_total: number,
-    customer_id: number,
-    order_items: OrderItemEntity[],
+    customer_id?: number,
+    order_items?: OrderItemEntity[],
+    order_id?: number,
+    order_date?: Date,
+    order_total?: number,
     customer_name?: string,
     order_status?: string,
   ) {
@@ -25,5 +25,21 @@ export class OrderEntity {
     this.customer_id = customer_id;
     this.customer_name = customer_name;
     this.order_status = order_status;
+  }
+
+  /**
+   * totalOrderPrice - calculates the total order price
+ : number  */
+  public totalOrderPrice(): number {
+    let price: number = 0.0;
+    
+    if (this.order_items != undefined){
+      for (let i = 0; i < this.order_items.length; i++){
+        price = price + ( Number(this.order_items[i].price) * Number(this.order_items[i].order_item_qtd) );
+      }
+    } else{
+    }
+    
+    return price;
   }
 }
